# TAPSwitch

./: .agignore  .gitignore  .gitmodules  .gitreview  ChangeLog  Doxyfile.in  Makefile.am  README.md  config.h.meson  configure.ac  meson.build  versioninfo.cache.in
config.site/: config.RasPi  config.StrBo
m4/: coverage.m4  cutter.m4
src/: Makefile.am  appliance.cc  appliance.hh  audiopath.cc  audiopath.hh  audiopathswitch.cc  audiopathswitch.hh  backtrace.c  backtrace.h  dbus_common.c  dbus_common.h  dbus_handlers.cc  dbus_handlers.h  dbus_handlers.hh  dbus_iface.c  dbus_iface.cc  dbus_iface.h  dbus_iface_deep.h  dbus_proxy_wrapper.hh  gerrorwrapper.hh  gvariantwrapper.cc  gvariantwrapper.hh  maybe.hh  meson.build  messages.c  messages.h  messages_dbus.c  messages_dbus.h  messages_glib.c  messages_glib.h  os.c  os.h  tapswitch.cc
tests/: Makefile.am  cutter-1_2_4.supp  cutter2junit.xslt  meson.build  mock_audiopath_dbus.cc  mock_audiopath_dbus.hh  mock_backtrace.cc  mock_backtrace.hh  mock_expectation.hh  mock_messages.cc  mock_messages.hh  mock_os.cc  mock_os.hh  run_test.sh.in  run_tests.sh  test_audiopath.cc  test_audiopathswitch.cc  test_dbus_handlers.cc  testrunner.cc  valgrind.sh  valgrind.sh.in  valgrind.suppressions
